Name:     euphoria-network
Version:  0.0.0.1
Synopsis: Networking for the Euphoria library

Description:
  Networking for the Euphoria library

License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2012 Tsuru Capital
Category:      FRP
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Ghc-options:    -Wall
  Hs-source-dirs: src

  Exposed-modules:
    FRP.Euphoria.Network
    FRP.Euphoria.Network.Multicast

  Other-modules:
    FRP.Euphoria.Network.Dispatch
    FRP.Euphoria.Network.Types

  Build-depends:
    base              >= 4     && < 5,
    bytestring        >= 0.9   && < 0.10,
    cereal            >= 0.3   && < 0.4,
    containers        >= 0.4   && < 0.5,
    elerea            >= 2.7   && < 2.8,
    network           >= 2.3   && < 2.4,
    network-multicast >= 0.0.6 && < 0.1,
    SHA               >= 1.5   && < 1.6

Source-repository head
  Type:     git
  Location: git://github.com/tsurucapital/euphoria-network.git
